<resources>
    <string name="app_name">ChatOn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="account_settings">Account Settings</string>
    <string name="signOut">SignOut</string>
    <string name="default_status">Hey there! What\'s Up ?</string>
    <string name="anonymous">Anonymous</string>
    <string name="change_image">Change Image</string>
    <string name="change_name">Change Name</string>
    <string name="change_status">Change Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="all_users">All Users</string>
    <string name="label_all_users">All Users</string>
    <string name="profile_image">Profile_image</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="enter_new_name">Enter New Name</string>
</resources>